--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>DSCE Discussion Forum</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
   <div class="loginBox">
     <h3>Sign In to the Discussion Forum</h3>
     <div class="formBox">
-      <form class="" action="#" method="post">
+      <form class="" action="forums.html" method="post">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" class="inputBox">
         <label for="password">Password <a href="#" class="passwdLink">Forgot Password?</a></label>
